# cross-platform-cpp-starter

./: .gitignore  CMakeLists.txt
cmake/: CMakeLists.txt
cmake/utils/: common.cmake  dependencies.cmake  ios.cmake  ios.toolchain.cmake
src/: main.cpp
src/platform/ios/: ViewController.mm  ios_utils.cpp  ios_utils.h
src/platform/win/: main.cpp
src/share/: demo.cpp  demo.h
tool/: __main__.py  android_build_executor.py  android_project_generator.py  build_executor.py  build_executor_factory.py  cygwin_build_executor.py  cygwin_project_generator.py  ios_build_executor.py  ios_project_generator.py  macos_build_executor.py  macos_project_generator copy.py  macos_project_generator.py  project_generator.py  project_generator_factory.py  unix_build_executor.py  unix_project_generator.py  win_build_executor.py  win_project_generator.py
tool/macos/exampleapp/: ViewController.mm  main.m
tool/macos/helloworld/: AppDelegate.m
